# Rust

./: Cargo.toml  README.md
Ownership/src/: main.rs
Vectors/src/: main.rs
array/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
comments/src/: main.rs
enums/src/: main.rs
function/src/: main.rs
if_else/src/: main.rs
if_let/src/: main.rs
input/src/: main.rs
lifetimes/src/: main.rs
macross/: Cargo.toml
macross/src/: main.rs
matchs/src/: main.rs
methods-struct/: Cargo.toml
methods-struct/src/: main.rs
modules/src/: fruit.rs  main.rs
modules/src/hi/: ayush.rs  mod.rs  singh.rs
option_match/: Cargo.toml
option_match/src/: main.rs
options/src/: main.rs
read_file/: home1.txt
read_file/src/: main.rs
references/src/: main.rs
result/src/: main.rs
structs/src/: main.rs
tuple/src/: main.rs
tuple_struct/src/: main.rs
